Fix When user focus on the search button via tab key Focus is not visible

--- a/src/shared/components/TopcoderHeader/style.scss
+++ b/src/shared/components/TopcoderHeader/style.scss
@@ -170,6 +170,11 @@
       background-color: transparent;
     }
   }
+
+  &:global.focus {
+    outline: 0;
+    box-shadow: 0 0 1px 3px rgba(0, 123, 255, 0.5);
+  }
 }
 
 .user-menu {
